update style and responsivity

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </header>
 
-    <div id="mealList" class="meal-List"></div>
+    <div id="mealList" class="meal-list"></div>
     <div class="modal-container">
         <button id="recipeCloseBtn" class="close-button">&times</button>
         <div class="meal-details-content">
